fix styling to be better on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,3 +22,8 @@
 .file {
   height: 200px;
 }
+@media only screen and (max-width: 450px){
+  .App{
+    flex-direction: column;
+  }
+}
